nextgen/vcs-hooks/tests/snapshots/hooks_generator_test__unix__links_git_hooks-2.snap
---
source: nextgen/vcs-hooks/tests/hooks_generator_test.rs
expression: "fs::read_to_string(post_push).unwrap()"
---
#!/usr/bin/env bash
set -eo pipefail

./.moon/hooks/post-push.sh
