nextgen/vcs-hooks/tests/snapshots/hooks_generator_test__unix__links_git_hooks.snap
---
source: nextgen/vcs-hooks/tests/hooks_generator_test.rs
expression: "fs::read_to_string(pre_commit).unwrap()"
---
#!/usr/bin/env bash
set -eo pipefail

./.moon/hooks/pre-commit.sh
